--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "build:href": "ng build --base-href ./",
+    "build:github": "npm run build:href && npm run copy:dist && npm run copy:browser",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "delete:docs": "del docs"
+    "delete:docs": "del docs",
+    "copy:dist": "copyfiles dist/bases/* ./docs -f",
+    "copy:browser": "copyfiles dist/bases/browser* ./docs -f"
+
   },
   "private": true,
   "dependencies": {
@@ -32,6 +36,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^9.0.8",
+    "copyfiles": "^2.4.1",
     "del-cli": "^5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
